2006-05-13  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclProc.c (ProcCompileProc):  When a bump of the compile
        epoch forces the re-compile of a proc body, take care not to
        overwrite any Proc struct that may be referred to on the active
        call stack.  This fixes [Bug 148218].  Note that the fix will not be
        effective for code that calls the private routine TclProcCompileProc()
        directly.

2006-05-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclMain.c (Tcl_Main):		Corrected flaw that required
	* tests/main.test: (Tcl_Main-4.5):	processing of one interactive
	command before passing control to the loop routine registered with
	Tcl_SetMainLoop() [Bug 1481986].

2006-05-04  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.14
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

	* generic/tclExecute.c (ExprSrandFunc):	Restore acceptance of wide
	* tests/expr-old.test: integer values by srand() [Bug 1480509].

2006-04-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.13 TAGGED FOR RELEASE ***

	* changes:	updates for another RC.

2006-04-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c:	Stop some interference between enter traces
	* tests/trace.test:	and enterstep traces.  [Bug 1458266]

2006-04-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:	updates for another RC.

2006-04-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclRegexp.c (FinalizeRegexp): full reset data to
	indicate readiness for reinitialization.

2006-04-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIndexObj.c (Tcl_GetIndexFromObjStruct):	It seems
	* tests/indexObj.test:	there are extensions that rely on the prior
	* doc/GetIndex.3:	behavior that the empty string cannot succeed
	as a unique prefix matcher, so I'm restoring Donal Fellow's solution.